Bug 137593 - FILEOPEN DOCX Table paragraph gets unexpected spacing before if shape is anchored to it
Summary: FILEOPEN DOCX Table paragraph gets unexpected spacing before if shape is anch...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2020-10-19 12:24 UTC by NISZ LibreOffice Team
Modified: 2020-10-27 14:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example file from Word (15.33 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-10-19 12:24 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (142.41 KB, image/png)
2020-10-19 12:25 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-10-19 12:24:45 UTC
Created attachment 166505 [details]
Example file from Word

Attached file was made by minimizing the example document in bug #100920
A table has some text in it formatted by paragraph style and direct formatting as well.
If there is a drawing shape anchored to the first paragraph of the table an unexpected 0.49 cm spacing before setting appears in Writer.

Steps to reproduce:
1.	Open attached document

Actual results:
First tables first paragraph has 0.49 cm spacing before, but this does not happen with the second table. Only difference is the text box shape anchored to the first paragraph of the first table.

Expected results:
No spacing before.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: c064766901722082df0d759c95434c1460fcdba5
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL

Also happens in:
Version: 6.2.0.3
Build ID: 98c6a8a1c6c7b144ce3cc729e34964b47ce25d62
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded

Not yet in:
Verzió: 6.1.0.3
Build az.: efb621ed25068d70781dc026f7e9c5187a4decd1
CPU szálak: 4; OS: Windows 6.3; Felületmegjelenítés: alapértelmezett; 
Területi beállítások: hu-HU (hu_HU); Calc: CL


Additional Information: 

Bibisected using bibisect-win32-6.2 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=5c6bce38a01b21403a603acd3148cf3bbb4c685f 

author
László Németh <nemeth@numbertext.org> Thu Jul 12 17:15:03 2018 +0200 

committer
László Németh <nemeth@numbertext.org> Tue Jul 17 11:59:07 2018 +0200

tdf#104354 DOCX import: fix paragraph auto spacing in tables

Adding CC to: László Németh
Comment 1 NISZ LibreOffice Team 2020-10-19 12:25:01 UTC
Created attachment 166506 [details]
Screenshot of the original document side by side in Word and Writer
Comment 2 Commit Notification 2020-10-26 17:19:03 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/41e230e81b50235b5b86f883ef424a8ba5b42288

tdf#137593 DOCX import: fix para top margin in cells with shapes

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2020-10-27 14:22:04 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/4c07b4e48f10349c5d1f3f7274b7cbbcbaa9d57b

tdf#137593 DOCX import: fix para top margin in cells with shapes

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-10-27 14:24:37 UTC
Verified in

Version: 7.1.0.0.alpha1+
Build ID: f27c4ec5c864395f4cdaec32d7e95ff24e4f43c8
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@László Németh, thanks for fixing this issue!!